# music_api

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  DRE-Player_De_Música.docx  Dockerfile  README.md  env.py  example.env  index.html  pyproject.toml  requirements.txt  setup.cfg  test.py
docs/: Cronograma_project.mpp  DRE-Player_De_Música.odt  Tabela_Estimativa_Projeto.xlsx  music_player.side
music_api/: main.py
src/: main.py
src/controllers/: songsControllers.py
