[tool.poetry]
name = "music_api"
version = "0.1.0"
description = ""
authors = ["Henrique <henriquecastro@unifei.edu.br>"]

[tool.poetry.scripts]
start = "uvicorn src.main:app --reload --host 0.0.0.0"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
eyed3 = "^0.9.6"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.19.0"
black = "^22.3.0"
mypy = "^0.961"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
