[tool.poetry]
name = "music-api"
version = "0.1.0"
description = ""
authors = ["Henrique <henriquecastro@unifei.edu.br>"]
readme = "README.md"
packages = [{include = "music_api"}]

[tool.poetry.dependencies]
python = "^3.10"
supabase = "^0.5.8"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
python-multipart = "^0.0.5"
eyed3 = "^0.9.6"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
mypy = "^0.971"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
