[tool.poetry]
authors = ["Henrique <henriquecastro@unifei.edu.br>"]
description = ""
name = "music-api"
packages = [{include = "music_api"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.scripts]
start = "music_api.main:run"

[tool.poetry.dependencies]
eyed3 = "^0.9.6"
fastapi = "^0.85.0"
python = "^3.10"
python-multipart = "^0.0.5"
supabase = "^0.5.8"
uvicorn = "^0.18.3"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.971"
pre-commit = "^2.20.0"
pytest = "^7.1.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
